# presenter

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
Application/: ContentView.swift  Info.plist  PresentationSession.swift  PresenterBridge.h  PresenterBridge.mm  PresenterWindowView.swift  RebreifApp.swift  VisualEffectView.swift
Application.xcodeproj/: project.pbxproj
Application.xcodeproj/project.xcworkspace/xcuserdata/ICHERNA.xcuserdatad/: UserInterfaceState.xcuserstate
Application.xcodeproj/xcuserdata/ICHERNA.xcuserdatad/xcschemes/: xcschememanagement.plist
Application/Application/: Application-Bridging-Header.h  PresentationSession.swift  PresenterBridge.h  PresenterBridge.mm  PresenterWindowView.swift
Frameworks/: SDL2-LICENSE.txt
Frameworks/SDL2.xcframework/: Info.plist
demo/: demo.slides  demo.xml
demo/styles/: dark.style  light.style
docs/: SLIDE_FORMAT.md
examples/: demo_presentation.md
include/: charts.h  common.h  constants.h  font.h  highlight.h  image.h  layout.h  parser.h  presenter_api.h  renderer.h  screenshot.h  style.h  ui.hpp
schemas/: presentation.dtd  style.dtd
share/highlight/: bash.txt  c.txt  cpp.txt  go.txt  java.txt  javascript.txt  json.txt  lisp.txt  python.txt  rust.txt  xml.txt  zil.txt
skills/: presentation.md
src/: charts.cpp  font.cpp  highlight.cpp  image.cpp  layout.cpp  main.cpp  parser.cpp  presenter_api.cpp  renderer.cpp  screenshot.cpp  style.cpp  ui.cpp  xml_parser.cpp
test/: test_highlight.cpp  test_image.cpp  test_layout.cpp  test_parser.cpp  test_screenshot.cpp  test_textbounds.cpp  test_xml_parser.cpp
